fix: add object-fit to prevent image stretching

--- a/client/src/styles/scss/components/testimonial-card.scss
+++ b/client/src/styles/scss/components/testimonial-card.scss
@@ -43,6 +43,8 @@
             width: 60px;
             height: 60px;
             border-radius: 60px;
+            object-fit: cover;
+            background-color: base.$neutral-300;
         }
 
         .name-role-wrapper {
